Fix styling: table spacing, button background, Idiomatic CSS, card padding

--- a/src/Card.css
+++ b/src/Card.css
@@ -1,26 +1,28 @@
 .card {
-  background-color: #FFF;
-  margin: 5px;
   width: 250px;
+  padding: 0 10px 20px 10px;
   border: 1px solid gray;
+  margin: 5px;
+  background-color: #FFF;
   text-align: center;
-  padding-bottom: 20px;
 }
 
 .card h2 {
-  font-weight: 400;
   height: 40px;
+  font-weight: 400;
 }
 
 .card table {
   margin: 0 auto;
+  border-collapse: separate;
+  border-spacing: 22px 2px;
 }
 
 .active {
-  box-shadow: 3px 3px 3px black;
+  box-shadow: 3px 3px 3px #000;
 }
 
 .active h2 {
-  color: #327c8e;
+  color: #327C8E;
   font-weight: 700;
 }
